tests/ui/unsafe/unsafe-fn-deref-ptr.thir.stderr
error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> $DIR/unsafe-fn-deref-ptr.rs:5:13
   |
LL |     let _ = *p;
   |             ^^ dereference of raw pointer
   |
   = note: raw pointers may be null, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> $DIR/unsafe-fn-deref-ptr.rs:6:17
   |
LL |     let _: u8 = *p;
   |                 ^^ dereference of raw pointer
   |
   = note: raw pointers may be null, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> $DIR/unsafe-fn-deref-ptr.rs:7:9
   |
LL |     _ = *p;
   |         ^^ dereference of raw pointer
   |
   = note: raw pointers may be null, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> $DIR/unsafe-fn-deref-ptr.rs:8:12
   |
LL |     return *p;
   |            ^^ dereference of raw pointer
   |
   = note: raw pointers may be null, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0133`.
